--- a/src/Components/Pages/MainPage.css
+++ b/src/Components/Pages/MainPage.css
@@ -49,10 +49,9 @@
 }
 
 .slide-show {
-
-align-items: center;
+    display: flex;
+    align-items: center;
     justify-content: center;
-
     grid-area: slide_show;
 }
 
